--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.4.0",
+    "eslint-plugin-tailwindcss": "^3.17.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
