--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "commit-message-generator"]
+  "include": ["src", "commit-message-generator", "simple-modal"]
 }
